# rooiam

./: .dockerignore  .env.candycloud.public  .env.demo.public  .env.docker.local.demo  .env.docker.local.prod  .env.docker.public.demo  .env.docker.public.prod  .env.production.public  .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  DOCKER.md  Dockerfile.admin  Dockerfile.app  Dockerfile.book  Dockerfile.candycloud  Dockerfile.demo  Dockerfile.docs  Dockerfile.example  Dockerfile.landing  Dockerfile.server.prod  NOTICE  README.md  SECURITY.md  STYLE_RUST.md  docker-compose.candycloud.yml  docker-compose.demo.yml  docker-compose.local-infra.yml  docker-compose.prod.yml  docker-entrypoint.server.sh  reset_rooiam_db.sh  start_rooiam.sh
art/: rooiam-logo.afdesign  (+1 more)
rooiam-server/: .env.local.demo  .env.local.prod  .env.public.demo  .env.public.prod  .env.template  Cargo.toml  build.rs  check_err.txt  check_out.json  check_out.txt
rooiam-server/migrations/: 0001_init.sql  0002_organization_invites.sql  0003_seed_rbac.sql  0004_system_settings.sql  0005_passkeys.sql  0006_webauthn_registration_state.sql  0007_mfa.sql  0008_mfa_backup_codes.sql  0009_tenant_branding.sql  0010_organization_auth_policy.sql  0011_tenant_auth_config.sql  0012_tenant_api_keys.sql  0013_phase4_company_roles_and_mfa.sql  0014_phase4_context_tracking.sql  0015_tenant_login_widget_style.sql  0016_tenant_login_widget_visibility.sql  0017_logo_container.sql  0018_card_radius.sql  0019_button_style.sql  0020_card_bg.sql  0021_card_border.sql  0022_split_logo.sql  0023_split_logo_container.sql  0024_tenant_client_policy.sql  0025_tenant_ip_policy.sql  0026_platform_roles.sql  0027_oauth_client_status.sql  0028_platform_admin_ip_policy.sql  0029_platform_storage_config.sql  0030_platform_org.sql  0031_phase3_advanced_policies.sql  0032_audit_log_retention.sql  0033_siem_webhook.sql  0034_concurrent_session_limit.sql  0035_session_binding.sql  0036_fix_platform_owner_flags.sql  0037_session_policy.sql  0038_session_policy_extended.sql  0039_org_platform_lock.sql  0040_status_paused_to_suspended.sql  (+20 more)
rooiam-server/scripts/: cleanup_stale_media_urls.sh  reset_db.sh
rooiam-server/src/: lib.rs  main.rs  openapi.rs
rooiam-server/src/bootstrap/: config.rs  router.rs  state.rs
rooiam-server/src/http/: mod.rs
rooiam-server/src/http/middleware/: auth.rs  mod.rs  parameter_guard.rs  rate_limit.rs  request_log.rs  security_headers.rs
rooiam-server/src/infra/: email.rs
rooiam-server/src/modules/: mod.rs
rooiam-server/src/modules/admin/: access.rs  demo.rs  handlers.rs  listing.rs  mod.rs  policies.rs  risk.rs  session_policies.rs  storage.rs
rooiam-server/src/modules/audit/: service.rs
rooiam-server/src/modules/auth/: handlers.rs  models.rs  repository.rs  service.rs
rooiam-server/src/shared/: audit_retention.rs  auth_context.rs  auth_policy.rs  client_policy.rs  demo_seed.rs  error.rs  ip_policy.rs  meerkateer.rs  mod.rs  oauth_client.rs  operator_policy.rs  platform_org.rs  redirect.rs  request_ip.rs  request_validation.rs  risk.rs  runtime_config.rs  session_fingerprint.rs  storage_config.rs  tenant_access.rs  test_seed.rs  token_cleanup.rs  widget_login_context.rs  workspace_governance.rs
rooiam-server/templates/: magic_link.html
(+582 files in other folders)
